fix wrong working Iframe on mobile devices

--- a/src/css/640.less
+++ b/src/css/640.less
@@ -14,3 +14,38 @@
         }
     }
 }
+
+.touch {
+    .main-header {
+        .button-container {
+            display: none;
+        }
+    }
+}
+
+.scenario-question-container {
+    overflow-x: auto;
+}
+
+
+.submit-wrapper {
+    .button {
+        min-width: 100%;
+    }
+}
+
+.tl-wrapper {
+    width: 170px;
+}
+
+.summary {
+    .summary-header {
+        .summary-header-content {
+            .progress-control-container {
+                .progress-control {
+                    margin-left: -160px;
+                }
+            }
+        }
+    }
+}
